[package]
name = "hovercrafter"
version = "0.1.0"
edition = "2021"
authors = ["Arthur JOLIVET"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core library
relm4 = "0.9"
tracker = "0.2.2"
rand = "0.9.0"
tokio = { version = "1.43.0", features = ["full"] }